--- a/settings.html
+++ b/settings.html
@@ -3,6 +3,9 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <link rel="manifest" href="manifest.json">
+  <meta name="theme-color" content="#0b2545">
+  <link rel="apple-touch-icon" href="icons/icon.svg">
   <title>Configurações - Oficina</title>
   <link rel="stylesheet" href="style.css">
 </head>
@@ -62,6 +65,9 @@
   <div id="toast-container"></div>
   <script src="script.js"></script>
   <script>
+    if('serviceWorker' in navigator){
+      navigator.serviceWorker.register('sw.js').then(()=> console.log('ServiceWorker registrado')).catch(()=>{});
+    }
     document.addEventListener('DOMContentLoaded', ()=>{
       loadLogo();
       loadSiteTitle();
