--- a/products.html
+++ b/products.html
@@ -41,6 +41,8 @@
   </main>
 
   <script src="script.js"></script>
+  <script src="supabase-config.js"></script>
+  <script src="remote.js"></script>
   <div id="toast-container" class="fixed top-4 right-4 space-y-2 z-50"></div>
   <script>
     if('serviceWorker' in navigator){
