--- a/settings.html
+++ b/settings.html
@@ -64,6 +64,8 @@
 
   <div id="toast-container"></div>
   <script src="script.js"></script>
+  <script src="supabase-config.js"></script>
+  <script src="remote.js"></script>
   <script>
     if('serviceWorker' in navigator){
       navigator.serviceWorker.register('sw.js').then(()=> console.log('ServiceWorker registrado')).catch(()=>{});
